<resources>
    //hhhhhh
    <string name="app_name">Doctor Appointment App</string>
    <string name="app_heading">Doctor Appointment</string>
    <string name="lg_Email">Email</string>
    <string name="lg_Password">Password</string>
    <string name="btn_Login">LOGIN</string>
    <string name="lg_register_view">Do not have an Account? Register</string>
    <string name="tv_copyrights">\@2021 Copyrights</string>
    <string name="pt_rg_name">Name</string>
    <string name="e_rg_Email">Email</string>
    <string name="rg_Phone">Phone</string>
    <string name="rg_Age">Age</string>
    <string name="rg_Password">Password</string>
    <string name="btn_Register">SIGN UP</string>
    <string name="tv_rg_login">Already have an Account? Login</string>
    <string name="rg_DOB">Date of Birth</string>
    <string name="tv_pro_name_holder">Name :</string>
    <string name="tv_pro_email_holder">Email :</string>
    <string name="tv_pro_phone_holder">Phone :</string>
    <string name="tv_pro_dob_holder">Date of Birth :</string>
    <string name="btn_pro_edit">Edit Profile</string>
    <string name="btn_pro_delete">Delete Profile</string>
    <string name="btn_pro_fav_doc">View My Doctors</string>
    <string name="btn_pro_booking">View Booking History</string>
    <string name="ph_heading">Online Pharmacy</string>
    <string name="rb_pickup">Pickup from Pharmacy</string>
    <string name="rb_delivery">Home Delivery</string>
    <string name="ph_Address">Address</string>
    <string name="tv_ph_address">Address</string>
    <string name="tv_ph_more">More Details</string>
    <string name="ph_moreDetails">more details</string>
    <string name="tv_ph_prescription">Prescription Image</string>
    <string name="btn_ph_send">SEND</string>
    <string name="ph_btn_imageInput">Photos</string>
    <string name="btn_mydoc">View More Details..</string>
    <string name="tv_mydoc_heading">My Doctors</string>
    <string name="tv_pm_Heading">Orders</string>
    <string name="tv_pm_IDholder">Order ID :</string>
    <string name="tv_pm_PresHolder">Prescription :</string>
    <string name="btn_pm_prescription">Click Here....</string>
    <string name="tv_pm_Addressholder">Address :</string>
    <string name="tv_pm_Detailsholder">More Details :</string>
    <string name="btn_pm_accept">Accept</string>
    <string name="btn_pm_reject">Reject</string>
    <string name="tv_feedHeading">Feedback</string>
    <string name="tv_about">About :</string>
    <string name="tv_massage">Massage :</string>
    <string name="tv_Rate">Rate Us:</string>
    <string name="btn_feedback">Send</string>
    <string name="tv_UpdateProHeading">Edit Profile</string>
    <string name="tv_ed_DOBholder">D.O.B :</string>
    <string name="btn_EditProfile">Update</string>
</resources>